--- a/pima_indians_diabetes.ipynb
+++ b/pima_indians_diabetes.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1NwIu7r3NKwwaNHmaIVtUT90zKAkVjtPO",
-      "authorship_tag": "ABX9TyNxAiUo506IQ4oAVvHfpaQJ",
+      "authorship_tag": "ABX9TyNlsKF7V2FwCFQFnLjZtIoG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2117,49 +2117,248 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Prepare Your Data For Machine Learning"
+      ],
+      "metadata": {
+        "id": "Ql3P3sR_sw8w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Rescale Data\n",
+        "When your data is comprised of attributes with varying scales, many machine learning algorithms\n",
+        "can benefit from rescaling the attributes to all have the same scale. Often this is referred to\n",
+        "as normalization and attributes are often rescaled into the range between 0 and 1. This is\n",
+        "useful for optimization algorithms used in the core of machine learning algorithms like gradient\n",
+        "descent. It is also useful for algorithms that weight inputs like regression and neural networks\n",
+        "and algorithms that use distance measures like k-Nearest Neighbors. You can rescale your data\n",
+        "using scikit-learn using the MinMaxScaler class2\n",
+        "."
+      ],
+      "metadata": {
+        "id": "0a3nh9Qj8LDl"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from numpy import set_printoptions\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "\n",
+        "array = data.values\n",
+        "# separate array into input and output components\n",
+        "X = array[:,0:8]\n",
+        "Y = array[:,8]\n",
+        "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+        "rescaledX = scaler.fit_transform(X)\n",
+        "# summarize transformed data\n",
+        "set_printoptions(precision=3)\n"
+      ],
       "metadata": {
         "id": "PlGAkWOWpXBC"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "rescaledX[0:5,:]"
+      ],
       "metadata": {
-        "id": "5lUlbPQHpW-0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5lUlbPQHpW-0",
+        "outputId": "c6c35d88-7cca-45ae-eced-3c9e0d0aaa65"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.353, 0.744, 0.59 , 0.354, 0.   , 0.501, 0.234, 0.483],\n",
+              "       [0.059, 0.427, 0.541, 0.293, 0.   , 0.396, 0.117, 0.167],\n",
+              "       [0.471, 0.92 , 0.525, 0.   , 0.   , 0.347, 0.254, 0.183],\n",
+              "       [0.059, 0.447, 0.541, 0.232, 0.111, 0.419, 0.038, 0.   ],\n",
+              "       [0.   , 0.688, 0.328, 0.354, 0.199, 0.642, 0.944, 0.2  ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Standardize Data\n",
+        "Standardization is a useful technique to transform attributes with a Gaussian distribution and\n",
+        "differing means and standard deviations to a standard Gaussian distribution with a mean of\n",
+        "0 and a standard deviation of 1. It is most suitable for techniques that assume a Gaussian\n",
+        "distribution in the input variables and work better with rescaled data, such as linear regression,\n",
+        "logistic regression and linear discriminate analysis. You can standardize data using scikit-learn\n",
+        "with the StandardScaler class3\n",
+        "."
+      ],
+      "metadata": {
+        "id": "lFkuiCWo84au"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "array = data.values\n",
+        "# separate array into input and output components\n",
+        "X = array[:,0:8]\n",
+        "Y = array[:,8]\n",
+        "scaler = StandardScaler().fit(X)\n",
+        "rescaledX = scaler.transform(X)\n",
+        "# summarize transformed data\n",
+        "set_printoptions(precision=3)\n",
+        "print(rescaledX[0:5,:])"
+      ],
       "metadata": {
-        "id": "KJd7JOdhrrVJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KJd7JOdhrrVJ",
+        "outputId": "5d391e96-0302-40a5-fa09-a45889059bb5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0.64   0.848  0.15   0.907 -0.693  0.204  0.468  1.426]\n",
+            " [-0.845 -1.123 -0.161  0.531 -0.693 -0.684 -0.365 -0.191]\n",
+            " [ 1.234  1.944 -0.264 -1.288 -0.693 -1.103  0.604 -0.106]\n",
+            " [-0.845 -0.998 -0.161  0.155  0.123 -0.494 -0.921 -1.042]\n",
+            " [-1.142  0.504 -1.505  0.907  0.766  1.41   5.485 -0.02 ]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Normalize Data\n",
+        "Normalizing in scikit-learn refers to rescaling each observation (row) to have a length of 1 (called\n",
+        "a unit norm or a vector with the length of 1 in linear algebra). This pre-processing method\n",
+        "can be useful for sparse datasets (lots of zeros) with attributes of varying scales when using\n",
+        "algorithms that weight input values such as neural networks and algorithms that use distance\n",
+        "measures such as k-Nearest Neighbors. You can normalize data in Python with scikit-learn\n",
+        "using the Normalizer class4\n",
+        ".\n"
+      ],
+      "metadata": {
+        "id": "XoOyfJUg9QY7"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.preprocessing import Normalizer\n",
+        "\n",
+        "array = data.values\n",
+        "# separate array into input and output components\n",
+        "X = array[:,0:8]\n",
+        "Y = array[:,8]\n",
+        "scaler = Normalizer().fit(X)\n",
+        "normalizedX = scaler.transform(X)\n",
+        "# summarize transformed data\n",
+        "set_printoptions(precision=3)\n",
+        "print(normalizedX[0:5,:])\n"
+      ],
       "metadata": {
-        "id": "c9HBLQjvrrS3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c9HBLQjvrrS3",
+        "outputId": "5e1847a3-4c3c-4f5d-9adc-7dec76118521"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.034 0.828 0.403 0.196 0.    0.188 0.004 0.28 ]\n",
+            " [0.008 0.716 0.556 0.244 0.    0.224 0.003 0.261]\n",
+            " [0.04  0.924 0.323 0.    0.    0.118 0.003 0.162]\n",
+            " [0.007 0.588 0.436 0.152 0.622 0.186 0.001 0.139]\n",
+            " [0.    0.596 0.174 0.152 0.731 0.188 0.01  0.144]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Binarize Data (Make Binary)\n",
+        "You can transform your data using a binary threshold. All values above the threshold are\n",
+        "marked 1 and all equal to or below are marked as 0. This is called binarizing your data or\n",
+        "thresholding your data. It can be useful when you have probabilities that you want to make crisp\n",
+        "values. It is also useful when feature engineering and you want to add new features that indicate\n",
+        "something meaningful. You can create new binary attributes in Python using scikit-learn with\n",
+        "the Binarizer class5\n",
+        ".\n"
+      ],
+      "metadata": {
+        "id": "Dv4YsrVk9isX"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.preprocessing import Binarizer\n",
+        "array = data.values\n",
+        "# separate array into input and output components\n",
+        "X = array[:,0:8]\n",
+        "Y = array[:,8]\n",
+        "binarizer = Binarizer(threshold=0.0).fit(X)\n",
+        "binaryX = binarizer.transform(X)\n",
+        "# summarize transformed data\n",
+        "set_printoptions(precision=3)\n",
+        "print(binaryX[0:5,:])"
+      ],
       "metadata": {
-        "id": "odmwGcdJrrQd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "odmwGcdJrrQd",
+        "outputId": "95bb1569-a610-498f-c21a-0080253437b6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1. 1. 1. 1. 0. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 0. 1. 1. 1.]\n",
+            " [1. 1. 1. 0. 0. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [0. 1. 1. 1. 1. 1. 1. 1.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Feature Selection For Machine Learning"
+      ],
+      "metadata": {
+        "id": "BkhFpJSo98iH"
+      }
     },
     {
       "cell_type": "code",
