--- a/pima_indians_diabetes.ipynb
+++ b/pima_indians_diabetes.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1NwIu7r3NKwwaNHmaIVtUT90zKAkVjtPO",
-      "authorship_tag": "ABX9TyNlsKF7V2FwCFQFnLjZtIoG",
+      "authorship_tag": "ABX9TyOyx1GjDu87GibustMiE563",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/khoatran02/Machine_Learning_Mastery_with_Python/blob/main/pima_indians_diabetes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Load data"
+      ],
+      "metadata": {
+        "id": "eSLqgLfWbetW"
+      }
     },
     {
       "cell_type": "code",
@@ -2361,17 +2370,102 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Univariate Selection\n",
+        "Statistical tests can be used to select those features that have the strongest relationship with\n",
+        "the output variable. The scikit-learn library provides the SelectKBest class2\n",
+        "that can be used\n",
+        "with a suite of different statistical tests to select a specific number of features. The example\n",
+        "below uses the chi-squared (chi2\n",
+        ") statistical test for non-negative features to select 4 of the best\n",
+        "features from the Pima Indians onset of diabetes dataset.<br>\n",
+        "You can see the scores for each attribute and the 4 attributes chosen (those with the highest\n",
+        "scores): plas, test, mass and age. I got the names for the chosen attributes by manually\n",
+        "mapping the index of the 4 highest scores to the index of the attribute names"
+      ],
       "metadata": {
-        "id": "BU2eAj3GrrN9"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "7HD3Vlgn-xjU"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from numpy import set_printoptions\n",
+        "from sklearn.feature_selection import SelectKBest\n",
+        "from sklearn.feature_selection import chi2\n",
+        "\n",
+        "array = data.values\n",
+        "X = array[:,0:8]\n",
+        "Y = array[:,8]\n",
+        "# feature extraction\n",
+        "test = SelectKBest(score_func=chi2, k=4)\n",
+        "fit = test.fit(X, Y)\n",
+        "# summarize scores\n",
+        "set_printoptions(precision=3)\n",
+        "print(fit.scores_)\n",
+        "features = fit.transform(X)\n",
+        "# summarize selected features\n",
+        "print(features[0:5,:])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BU2eAj3GrrN9",
+        "outputId": "158fcdd6-e7b6-4856-dabe-363e44b19109"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 111.52  1411.887   17.605   53.108 2175.565  127.669    5.393  181.304]\n",
+            "[[148.    0.   33.6  50. ]\n",
+            " [ 85.    0.   26.6  31. ]\n",
+            " [183.    0.   23.3  32. ]\n",
+            " [ 89.   94.   28.1  21. ]\n",
+            " [137.  168.   43.1  33. ]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Recursive Feature Elimination\n",
+        "The Recursive Feature Elimination (or RFE) works by recursively removing attributes and\n",
+        "building a model on those attributes that remain. It uses the model accuracy to identify which attributes (and combination of attributes) contribute the most to predicting the target attribute.\n",
+        "You can learn more about the RFE class3\n",
+        "in the scikit-learn documentation. The example below\n",
+        "uses RFE with the logistic regression algorithm to select the top 3 features. The choice of\n",
+        "algorithm does not matter too much as long as it is skillful and consistent.<br>\n",
+        "You can see that RFE chose the top 3 features as preg, mass and pedi. These are marked\n",
+        "True in the support array and marked with a choice 1 in the ranking array. Again, you can\n",
+        "manually map the feature indexes to the indexes of attribute names."
+      ],
+      "metadata": {
+        "id": "YR602EW2ZKHg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.feature_selection import RFE\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "array = data.values\n",
+        "X = array[:,0:8]\n",
+        "Y = array[:,8]\n",
+        "# feature extraction\n",
+        "model = LogisticRegression()\n",
+        "rfe = RFE(model, 3)\n",
+        "fit = rfe.fit(X, Y)\n",
+        "print(\"Num Features: %d\") % fit.n_features_\n",
+        "print(\"Selected Features: %s\") % fit.support_\n",
+        "print(\"Feature Ranking: %s\") % fit.ranking_\n"
+      ],
       "metadata": {
         "id": "9dIFqe1irrLd"
       },
@@ -2379,10 +2473,192 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Principal Component Analysis\n",
+        "Principal Component Analysis (or PCA) uses linear algebra to transform the dataset into a\n",
+        "compressed form. Generally this is called a data reduction technique. A property of PCA is that\n",
+        "you can choose the number of dimensions or principal components in the transformed result. In\n",
+        "the example below, we use PCA and select 3 principal components. Learn more about the PCA\n",
+        "class in scikit-learn by reviewing the API4. <br>\n",
+        "You can see that the transformed dataset (3 principal components) bare little resemblance\n",
+        "to the source data.\n"
+      ],
+      "metadata": {
+        "id": "-Mwrw2mlbzGX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.decomposition import PCA\n",
+        "\n",
+        "array = data.values\n",
+        "X = array[:,0:8]\n",
+        "Y = array[:,8]\n",
+        "# feature extraction\n",
+        "pca = PCA(n_components=3)\n",
+        "fit = pca.fit(X)\n",
+        "# summarize components\n",
+        "print(\"Explained Variance: \", fit.explained_variance_ratio_) \n",
+        "print(fit.components_)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0LYnSvv_rrJG",
+        "outputId": "d2058695-6ab5-4f91-ef31-e5858fc8c48e"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Explained Variance:  [0.889 0.062 0.026]\n",
+            "[[-2.022e-03  9.781e-02  1.609e-02  6.076e-02  9.931e-01  1.401e-02\n",
+            "   5.372e-04 -3.565e-03]\n",
+            " [-2.265e-02 -9.722e-01 -1.419e-01  5.786e-02  9.463e-02 -4.697e-02\n",
+            "  -8.168e-04 -1.402e-01]\n",
+            " [-2.246e-02  1.434e-01 -9.225e-01 -3.070e-01  2.098e-02 -1.324e-01\n",
+            "  -6.400e-04 -1.255e-01]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Feature Importance\n",
+        "Bagged decision trees like Random Forest and Extra Trees can be used to estimate the importance\n",
+        "of features. In the example below we construct a ExtraTreesClassifier classifier for the Pima\n",
+        "Indians onset of diabetes dataset. You can learn more about the ExtraTreesClassifier class5\n",
+        "in the scikit-learn API.<br>\n",
+        "You can see that we are given an importance score for each attribute where the larger the\n",
+        "score, the more important the attribute. The scores suggest at the importance of plas, age\n",
+        "and mass.\n"
+      ],
+      "metadata": {
+        "id": "5P0S-fo4cjYn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
+        "array = data.values\n",
+        "X = array[:,0:8]\n",
+        "Y = array[:,8]\n",
+        "# feature extraction\n",
+        "model = ExtraTreesClassifier()\n",
+        "model.fit(X, Y)\n",
+        "print(model.feature_importances_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wYTOUx7SpW8C",
+        "outputId": "fda3f007-72d9-4881-9fa4-dbeb4e574aff"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.11  0.229 0.098 0.08  0.074 0.142 0.118 0.148]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Evaluate the Performance of Machine Learning Algorithms with Resampling"
+      ],
+      "metadata": {
+        "id": "dEjUe07QdQCn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Split into Train and Test Sets\n",
+        "The simplest method that we can use to evaluate the performance of a machine learning\n",
+        "algorithm is to use different training and testing datasets. We can take our original dataset and\n",
+        "split it into two parts. Train the algorithm on the first part, make predictions on the second\n",
+        "part and evaluate the predictions against the expected results. The size of the split can depend\n",
+        "on the size and specifics of your dataset, although it is common to use 67% of the data for\n",
+        "training and the remaining 33% for testing.<br>\n",
+        "This algorithm evaluation technique is very fast. It is ideal for large datasets (millions of\n",
+        "records) where there is strong evidence that both splits of the data are representative of the\n",
+        "underlying problem. Because of the speed, it is useful to use this approach when the algorithm\n",
+        "you are investigating is slow to train. A downside of this technique is that it can have a high\n",
+        "variance. This means that differences in the training and test dataset can result in meaningful\n",
+        "differences in the estimate of accuracy. In the example below we split the Pima Indians dataset\n",
+        "into 67%/33% splits for training and test and evaluate the accuracy of a Logistic Regression\n",
+        "model."
+      ],
+      "metadata": {
+        "id": "TI-9kiH4hzyR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "array = data.values\n",
+        "X = array[:,0:8]\n",
+        "Y = array[:,8]\n",
+        "test_size = 0.33\n",
+        "seed = 7\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+        "model = LogisticRegression()\n",
+        "model.fit(X_train, Y_train)\n",
+        "result = model.score(X_test, Y_test)\n",
+        "print(\"Accuracy: \",result*100.0, \"%\") "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8KqWY6VEhzqK",
+        "outputId": "3a02dc93-9ae6-4f5c-e327-8e309bb80e52"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy:  78.74015748031496 %\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/linear_model/_logistic.py:818: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG,\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "0LYnSvv_rrJG"
+        "id": "f8RPYX0vhzlS"
       },
       "execution_count": null,
       "outputs": []
@@ -2391,7 +2667,43 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "wYTOUx7SpW8C"
+        "id": "xiQdOOyKhziy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Q4RPdZdchzgP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JorFb-K2hzdv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6-YGbkA5c2Ox"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sSpm9dUhc2MQ"
       },
       "execution_count": null,
       "outputs": []
